=== Desk Mess Mirrored ===
Changelog: October 27, 2013

== Version 2.2.3 ==
= Miscellaneous =
* Added Serbo-Croatian translation by Andrijana Nikolic from webhostinggeeks.com

/** ------------------------------------------------------------------------- */
== Version 2.2.2 ==
= Code =
* Fix comments closed message displaying when comments are open

/** ------------------------------------------------------------------------- */
== Version 2.2.1 ==
= Code =
* Expanded use of DMM_HOME_DOMAIN constant
* Change featured image to display full and centered across posts
* Corrected closed comments logic to properly display message
* Refactored author "About" box to not show empty details

= CSS =
* Added ordered list styles for pages with comments
* Added classes to author "About" box details for easier display manipulation
* Added site title and description id to appropriate HTML container
* Adjusted '.wp-caption img' properties
* Adjusted 'li.text_widget' margin values
* Adjusted various CSS elements and properties to display TUT data more correctly
* Adjusted `hr` class properties
* Centered searchform box and hid screen reader text

/** ------------------------------------------------------------------------- */
== Version 2.2 ==
= Code =
* Added filtered text messages when comments are open/closed but none exist
* Added link to author page when comments closed message is displayed
* Added code block termination comments
* Minor code formatting / refactoring to use "braces" for code blocks
* Refactor post meta details into a better string output

= CSS =
* Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image
* Added CSS relevant to the "Monster" plugin that represents the default WordPress core plugins

= Miscellaneous =
* Updated 'style.css' header block to use labels as noted in core trac ticket #16868

/** ------------------------------------------------------------------------- */