@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project version="4">
   <component name="ChangeListManager">
-    <list default="true" id="83d593d7-4db7-4223-a0d1-7326e99a5cd8" name="Default" comment="">
+    <list default="true" id="83d593d7-4db7-4223-a0d1-7326e99a5cd8" name="Default" comment="* Added support for Post-Format: Link">
+      <change type="NEW" beforePath="" afterPath="$PROJECT_DIR$/desk-mess-mirrored-link.php" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/changelog.txt" afterPath="$PROJECT_DIR$/changelog.txt" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/functions.php" afterPath="$PROJECT_DIR$/functions.php" />
+      <change type="MODIFICATION" beforePath="$PROJECT_DIR$/style.css" afterPath="$PROJECT_DIR$/style.css" />
       <change type="MODIFICATION" beforePath="$PROJECT_DIR$/.idea/workspace.xml" afterPath="$PROJECT_DIR$/.idea/workspace.xml" />
     </list>
     <ignored path="desk-mess-mirrored.iws" />
@@ -29,35 +32,37 @@
       <file leaf-file-name="style.css" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/style.css">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="8" column="29" selection-start="851" selection-end="851" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="22661">
+            <state line="686" column="9" selection-start="16214" selection-end="16214" vertical-scroll-proportion="-24.12" vertical-offset="11059" max-vertical-offset="22831">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="changelog.txt" pinned="false" current="false" current-in-tab="false">
+      <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="5" column="0" selection-start="94" selection-end="174" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="7752">
+            <state line="8" column="0" selection-start="132" selection-end="132" vertical-scroll-proportion="0.20029455" vertical-offset="0" max-vertical-offset="7854">
               <folding />
             </state>
           </provider>
         </entry>
       </file>
-      <file leaf-file-name="index.php" pinned="false" current="false" current-in-tab="false">
-        <entry file="file://$PROJECT_DIR$/index.php">
-          <provider selected="true" editor-type-id="text-editor">
-            <state line="44" column="4" selection-start="1725" selection-end="1725" vertical-scroll-proportion="-6.769231" vertical-offset="572" max-vertical-offset="1513">
-              <folding />
-            </state>
-          </provider>
-        </entry>
-      </file>
-      <file leaf-file-name="functions.php" pinned="false" current="true" current-in-tab="true">
+      <file leaf-file-name="functions.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/functions.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="373" column="0" selection-start="13725" selection-end="13725" vertical-scroll-proportion="0.4793262" vertical-offset="5637" max-vertical-offset="10880">
+            <state line="471" column="53" selection-start="18634" selection-end="18634" vertical-scroll-proportion="-18.307692" vertical-offset="7140" max-vertical-offset="10880">
               <folding />
+            </state>
+          </provider>
+        </entry>
+      </file>
+      <file leaf-file-name="desk-mess-mirrored-link.php" pinned="false" current="false" current-in-tab="false">
+        <entry file="file://$PROJECT_DIR$/desk-mess-mirrored-link.php">
+          <provider selected="true" editor-type-id="text-editor">
+            <state line="57" column="33" selection-start="2795" selection-end="2795" vertical-scroll-proportion="-12.75" vertical-offset="0" max-vertical-offset="1343">
+              <folding>
+                <element signature="e#6#474#0" expanded="true" />
+              </folding>
             </state>
           </provider>
         </entry>
@@ -83,7 +88,6 @@
   <component name="IdeDocumentHistory">
     <option name="changedFiles">
       <list>
-        <option value="$PROJECT_DIR$/wip/extra.css" />
         <option value="$PROJECT_DIR$/my-custom-style.css" />
         <option value="$PROJECT_DIR$/404.php" />
         <option value="$PROJECT_DIR$/archive.php" />
@@ -95,10 +99,11 @@
         <option value="$PROJECT_DIR$/header.php" />
         <option value="$PROJECT_DIR$/comments.php" />
         <option value="$PROJECT_DIR$/readme.txt" />
-        <option value="$PROJECT_DIR$/style.css" />
         <option value="$PROJECT_DIR$/index.php" />
-        <option value="$PROJECT_DIR$/changelog.txt" />
+        <option value="$PROJECT_DIR$/desk-mess-mirrored-link.php" />
         <option value="$PROJECT_DIR$/functions.php" />
+        <option value="$PROJECT_DIR$/style.css" />
+        <option value="$PROJECT_DIR$/changelog.txt" />
       </list>
     </option>
   </component>
@@ -461,7 +466,11 @@
       <created>1382910336084</created>
       <updated>1382910336084</updated>
     </task>
-    <option name="localTasksCounter" value="42" />
+    <task id="LOCAL-00042" summary="* Added support for post format 'link'">
+      <created>1382911224013</created>
+      <updated>1382911224013</updated>
+    </task>
+    <option name="localTasksCounter" value="43" />
     <servers />
   </component>
   <component name="TodoView" selected-index="0">
@@ -521,7 +530,6 @@
     <option name="myTodoPanelSettings">
       <TodoPanelSettings />
     </option>
-    <MESSAGE value="* Added DMM_HOME_DOMAIN constant for better future proofing&#10;* Added 'DMM No Posts Found' function to replace repetitive code&#10;* Removed backward compatibility checks to bring in line with current WordPress versions (3.4+)&#10;* Removed DMM_Add_Body_Classes in favor of using BNS Body Classes at http://wordpress.org/extend/plugins/bns-body-classes/" />
     <MESSAGE value="Tagged as version 2.1; ready for release" />
     <MESSAGE value="* Updated 'style.css' header block to use labels as noted in core trac ticket #16868" />
     <MESSAGE value="* Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image" />
@@ -546,18 +554,14 @@
     <MESSAGE value="* Version update" />
     <MESSAGE value="* Version update; update 'readme.txt' to reference http://themes.trac.wordpress.org/ticket/13479" />
     <MESSAGE value="* Added Serbo-Croatian translation by Andrijana Nikolic from webhostinggeeks.com" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Added Serbo-Croatian translation by Andrijana Nikolic from webhostinggeeks.com" />
+    <MESSAGE value="* Added support for post format 'link'" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Added support for post format 'link'" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="true" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
   </component>
   <component name="editorHistoryManager">
-    <entry file="file://$PROJECT_DIR$/desk-mess-mirrored-quote.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="0" />
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/dmm-navigation.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="0" />
@@ -571,11 +575,6 @@
     <entry file="file://$PROJECT_DIR$/single.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-0.0" vertical-offset="0" max-vertical-offset="0" />
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/desk-mess-mirrored-status.php">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="71" column="0" selection-start="3109" selection-end="3301" vertical-scroll-proportion="-19.807692" vertical-offset="0" max-vertical-offset="0" />
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/404.php">
@@ -616,20 +615,6 @@
         <state line="0" column="0" selection-start="0" selection-end="0" vertical-scroll-proportion="-0.0" vertical-offset="0" max-vertical-offset="0" />
       </provider>
     </entry>
-    <entry file="file://$PROJECT_DIR$/style.css">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="8" column="29" selection-start="851" selection-end="851" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="22661">
-          <folding />
-        </state>
-      </provider>
-    </entry>
-    <entry file="file://$PROJECT_DIR$/changelog.txt">
-      <provider selected="true" editor-type-id="text-editor">
-        <state line="5" column="0" selection-start="94" selection-end="174" vertical-scroll-proportion="0.0" vertical-offset="0" max-vertical-offset="7752">
-          <folding />
-        </state>
-      </provider>
-    </entry>
     <entry file="file://$PROJECT_DIR$/index.php">
       <provider selected="true" editor-type-id="text-editor">
         <state line="44" column="4" selection-start="1725" selection-end="1725" vertical-scroll-proportion="-6.769231" vertical-offset="572" max-vertical-offset="1513">
@@ -637,9 +622,39 @@
         </state>
       </provider>
     </entry>
+    <entry file="file://$PROJECT_DIR$/desk-mess-mirrored-status.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="7" column="19" selection-start="0" selection-end="3448" vertical-scroll-proportion="-4.576923" vertical-offset="0" max-vertical-offset="1411">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/desk-mess-mirrored-link.php">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="57" column="33" selection-start="2795" selection-end="2795" vertical-scroll-proportion="-12.75" vertical-offset="0" max-vertical-offset="1343">
+          <folding>
+            <element signature="e#6#474#0" expanded="true" />
+          </folding>
+        </state>
+      </provider>
+    </entry>
     <entry file="file://$PROJECT_DIR$/functions.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="373" column="0" selection-start="13725" selection-end="13725" vertical-scroll-proportion="0.4793262" vertical-offset="5637" max-vertical-offset="10880">
+        <state line="471" column="53" selection-start="18634" selection-end="18634" vertical-scroll-proportion="-18.307692" vertical-offset="7140" max-vertical-offset="10880">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/style.css">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="686" column="9" selection-start="16214" selection-end="16214" vertical-scroll-proportion="-24.12" vertical-offset="11059" max-vertical-offset="22831">
+          <folding />
+        </state>
+      </provider>
+    </entry>
+    <entry file="file://$PROJECT_DIR$/changelog.txt">
+      <provider selected="true" editor-type-id="text-editor">
+        <state line="8" column="0" selection-start="132" selection-end="132" vertical-scroll-proportion="0.20029455" vertical-offset="0" max-vertical-offset="7854">
           <folding />
         </state>
       </provider>
